--- a/src/main/webapp/WEB-INF/views/people/edit.html
+++ b/src/main/webapp/WEB-INF/views/people/edit.html
@@ -7,9 +7,9 @@
 <body>
 
 <form th:method="PATCH" th:action="@{/people/{id}(id = ${person.getPerson_id()})}" th:object="${person}">
-    <label for="full_name">Введите ФИО</label>
-    <input id="full_name" type="text" th:field="*{full_name}"/>
-    <div style="color: red" th:if="${#fields.hasErrors('full_name')}" th:errors="*{full_name}">Name error</div>
+    <label for="fullName">Введите ФИО</label>
+    <input id="fullName" type="text" th:field="*{fullName}"/>
+    <div style="color: red" th:if="${#fields.hasErrors('fullName')}" th:errors="*{fullName}">Name error</div>
     <br/>
     <label for="birthdate">Введите  год рождения</label>
     <input id="birthdate" type="text" th:field="*{birthdate}"/>
