--- a/src/main/webapp/WEB-INF/views/people/show.html
+++ b/src/main/webapp/WEB-INF/views/people/show.html
@@ -5,7 +5,7 @@
     <title>Пользователь</title>
 </head>
 <body>
-<p th:text="${person.getFull_name() + ', ' + person.getBirthdate()}">person</p>
+<p th:text="${person.getFullName() + ', ' + person.getBirthdate()}">person</p>
 
 <div th:if="${not books.isEmpty()}">
     <hr/>
@@ -31,6 +31,8 @@
         <input type="submit" value="Удалить"/>
     </form>
 </div>
+<br>
+<a href="/people">К списку пользователей</a>
 
 </body>
 </html>
