Improved search for books

--- a/src/main/webapp/WEB-INF/views/books/index.html
+++ b/src/main/webapp/WEB-INF/views/books/index.html
@@ -13,6 +13,9 @@
 <a href="/books/new">Добавить книгу</a>
 <br/>
 <a href="/people">Список пользователей</a>
+<br/>
+<a href="/books/search">Поиск книг по названию</a>
+
 
 </body>
 </html>
